# MediaFormatParser

./: CMakeLists.txt  WavParser.cpp  main.cpp  utils.h
output/: 4ch.pcm  4ch.txt  6_Channel_ID.pcm  6_Channel_ID.txt  8_Channel_ID.txt  GLASS.pcm  GLASS.txt  M1F1-Alaw-AFsp.pcm  M1F1-Alaw-AFsp.txt  M1F1-AlawWE-AFsp.txt  M1F1-float32-AFsp.txt  M1F1-float32WE-AFsp.pcm  M1F1-float32WE-AFsp.txt  M1F1-float64-AFsp.pcm  M1F1-float64-AFsp.txt  M1F1-float64WE-AFsp.txt  M1F1-int16-AFsp.txt  M1F1-int16WE-AFsp.pcm  M1F1-int16WE-AFsp.txt  M1F1-int32-AFsp.txt  M1F1-int32WE-AFsp.pcm  M1F1-int32WE-AFsp.txt  M1F1-mulaw-AFsp.pcm  M1F1-mulaw-AFsp.txt  M1F1-mulawWE-AFsp.txt  M1F1-uint8-AFsp.txt  M1F1-uint8WE-AFsp.pcm  M1F1-uint8WE-AFsp.txt  Utopia Critical Stop.txt  addf8-Alaw-GW.pcm  addf8-Alaw-GW.txt  addf8-GSM-GW.pcm  addf8-GSM-GW.txt  addf8-mulaw-GW.pcm  addf8-mulaw-GW.txt  drmapan.pcm  drmapan.txt  jay.txt  stereofl.pcm  stereofl.txt  (+4 more)
src/: FlvParser.cpp  FlvParser.h  M4aParser.cpp  M4aParser.h  Mp3Parser.cpp  Mp3Parser.h  Parser.cpp  Parser.h  WavParser.cpp  WavParser.h  main.cpp  utils.cpp  utils.h
